"fix: 스웨거 접근 권한 수정"